<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ksyun.KMCFuFilterDemo.beauty.MainActivity"
    android:background="@color/bg">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/main_activity_header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="116dp"
            android:text="@string/main_activity_header"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="13dp"
            android:textColor="@color/white"
            android:text="@string/stream_url"/>

        <EditText
            android:id="@+id/stream_url"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginRight="27dp"
            android:layout_marginEnd="27dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/single_line_input"
            android:inputType="textUri"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/save_file"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/save_file_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/save_file_off" />
        </LinearLayout>

        <Button
            android:id="@+id/start"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:background="@drawable/round_button"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_demo_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/note" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="13dp"
            android:text="@string/demo_note"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
