<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/filter_select_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/beauty_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:weightSum="8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/blur"
                android:layout_gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0"
                android:layout_weight="0.5"
                android:textColor="@color/white"
                />

            <com.xw.repo.BubbleSeekBar
                android:id="@+id/beauty_blur"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                app:bsb_max="5"
                app:bsb_min="0"
                app:bsb_progress="5"
                app:bsb_second_track_color="@color/chosen"
                app:bsb_track_color="@color/grey"
                app:bsb_is_float_type="false"
                app:bsb_thumb_color="@color/white"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="5"
                android:textColor="@color/white"
                android:layout_weight="0.5"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/color"
                android:layout_gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0"
                android:layout_weight="0.5"
                android:textColor="@color/white"
                />

            <com.xw.repo.BubbleSeekBar
                android:id="@+id/beauty_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                app:bsb_max="1.0"
                app:bsb_min="0"
                app:bsb_progress="0.3"
                app:bsb_second_track_color="@color/chosen"
                app:bsb_track_color="@color/grey"
                app:bsb_is_float_type="true"
                app:bsb_thumb_color="@color/white"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="1"
                android:textColor="@color/white"
                android:layout_weight="0.5"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/red"
                android:layout_gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0"
                android:layout_weight="0.5"
                android:textColor="@color/white"
                />

            <com.xw.repo.BubbleSeekBar
                android:id="@+id/beauty_red"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                app:bsb_max="1.0"
                app:bsb_min="0"
                app:bsb_progress="0.3"
                app:bsb_second_track_color="@color/chosen"
                app:bsb_track_color="@color/grey"
                app:bsb_is_float_type="true"
                app:bsb_thumb_color="@color/white"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="1"
                android:textColor="@color/white"
                android:layout_weight="0.5"
                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shape_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/face_shape" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/default_shape"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/shape_default"
                    android:background="@drawable/round_button2"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/god_shape"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/shape_god"
                    android:background="@drawable/round_button2"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/star_shape"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/shape_star"
                    android:background="@drawable/round_button2"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/nature_shape"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/shape_nature"
                    android:background="@drawable/round_button2"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/eye"
                android:layout_gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0"
                android:layout_weight="0.5"
                android:textColor="@color/white"
                />

            <com.xw.repo.BubbleSeekBar
                android:id="@+id/beauty_eye"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                app:bsb_max="2.0"
                app:bsb_min="0"
                app:bsb_progress="0.5"
                app:bsb_second_track_color="@color/chosen"
                app:bsb_track_color="@color/grey"
                app:bsb_is_float_type="true"
                app:bsb_thumb_color="@color/white"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="2"
                android:textColor="@color/white"
                android:layout_weight="0.5"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/thin"
                android:layout_gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0"
                android:layout_weight="0.5"
                android:textColor="@color/white"
                />

            <com.xw.repo.BubbleSeekBar
                android:id="@+id/beauty_cheek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                app:bsb_max="2.0"
                app:bsb_min="0"
                app:bsb_progress="1.0"
                app:bsb_second_track_color="@color/chosen"
                app:bsb_track_color="@color/grey"
                app:bsb_is_float_type="true"
                app:bsb_thumb_color="@color/white"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="2"
                android:textColor="@color/white"
                android:layout_weight="0.5"
                />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>